samples/demo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
